Javac2007/src/test/attr/error/intf_annotation_cant_have_type_params.java
package test.attr.error;
public @interface intf_annotation_cant_have_type_params<T> {}


